Day5/final-test/np-starter.yaml
# np-starter.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: netpol-lab
  labels:
    app: frontend
spec:
  containers:
  - name: curl
    image: curlimages/curl:8.5.0
    command: ["sh", "-c", "sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: netpol-lab
  labels:
    app: backend
spec:
  containers:
  - name: app
    image: busybox
    command:
    - sh
    - -c
    - >
      echo "<h2>NetworkPolicy Demo</h2><br>" > /var/www/index.html;
      while true; do echo "$(date) connected from frontend<br>" >> /var/www/index.html; sleep 2; done
    volumeMounts:
    - name: logs
      mountPath: /var/www
  - name: log-web
    image: nginx:1.25
    volumeMounts:
    - name: logs
      mountPath: /usr/share/nginx/html
    ports:
    - containerPort: 80
  volumes:
  - name: logs
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: log-web-svc
  namespace: netpol-lab
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30085
