Day5/final-test/net-all-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: netpol-lab
spec:
  podSelector: {}      # 모든 Pod에 적용
  policyTypes:
  - Ingress
  - Egress
